(library
  (name jl)
  (flags :standard -linkall)
  (foreign_stubs (language c) (flags -I /usr/include/julia) (names jl_ctypes ocaml_stubs))
  (preprocess (pps ppx_let ppx_sexp_conv))
  (libraries base bigarray stdio ctypes.foreign ctypes.stubs ctypes))

(rule
  (targets bindings.ml)
  (deps    ../stubs/bindings.ml)
  (action  (copy ../stubs/bindings.ml bindings.ml)))

(rule
  (targets jl_ctypes.c jl_ctypes.ml)
  (deps    (:ctypes_gen ../stubs/gen.exe))
  (action  (run %{ctypes_gen})))
